0x0A-python-inheritance/tests/7-base_geometry.txt
>>> BaseGeometry = __import__('7-base_geometry').BaseGeometry

Test cases given
>>> bg = BaseGeometry()
>>> bg.integer_validator("my_int", 12)
>>> bg.integer_validator("width", 89)
>>> bg.integer_validator("name", "John")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 7, in integer_validator
TypeError: name must be an integer
>>> bg.integer_validator("age", 0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 9, in integer_validator
ValueError: age must be greater than 0
>>> bg.integer_validator("distance", -4)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 9, in integer_validator
ValueError: distance must be greater than 0

>>> bg.area()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'bg' is not defined
NameError: name 'bg' is not defined
>>> bg.integer_validator()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'bg' is not defined
>>> bg.integer_validator(“age”)
  File "<stdin>", line 1
    bg.integer_validator(“age”)
                             ^
SyntaxError: invalid character in identifier
>>> bg.integer_validator(“age”, (4,))
  File "<stdin>", line 1
    bg.integer_validator(“age”, (4,))
                             ^
SyntaxError: invalid character in identifier
>>> bg.integer_validator(“age”, [3])
  File "<stdin>", line 1
    bg.integer_validator(“age”, [3])
                             ^
SyntaxError: invalid character in identifier
>>> bg.integer_validator(“age”, True)
  File "<stdin>", line 1
    bg.integer_validator(“age”, True)
                             ^
SyntaxError: invalid character in identifier
>>> bg.integer_validator(“age”, {3, 4})
  File "<stdin>", line 1
    bg.integer_validator(“age”, {3, 4})
                             ^
SyntaxError: invalid character in identifier
>>> bg.integer_validator(“age”, None)
  File "<stdin>", line 1
    bg.integer_validator(“age”, None)
                             ^
SyntaxError: invalid character in identifier
